--- a/src/style.css
+++ b/src/style.css
@@ -70,7 +70,14 @@ input {
 	font-size: 16px;
 	font-size: 500;
 	line-height: 2;
-	padding: 16px;
+	padding: 32px;
+}
+
+.signature {
+	color: indigo;
+	display: block;
+	font-weight: 700;
+	margin-top: 16px;
 }
 
 footer {
